--- a/package.json
+++ b/package.json
@@ -1,22 +1,34 @@
 {
   "name": "transbase",
   "version": "0.0.1",
+  "license": "MIT",
   "description": "A node.js driver for transbase",
   "main": "transbase.js",
   "repository": {
     "type": "git",
     "url": "git@github.com:TransactionSoftwareGmbH/transbase-nodejs.git"
   },
+  "engines" : { "node" : ">=12" },
   "gypfile": true,
   "binary": {
     "napi_versions": [
       5
     ]
   },
+  "files": [
+    "binding.gyp",
+    "tci.cpp",
+    "transbase.js",
+    "README.md",
+    "LICENSE.md",
+    "package.json"
+  ],
   "scripts": {
     "install": "prebuild-install --runtime napi || node-gyp rebuild",
     "rebuild": "node-gyp rebuild",
     "prebuild": "prebuild --runtime napi --all --verbose --include-regex \".(node|lib)$\"",
+    "prebuild:publish": "prebuild --runtime napi --include-regex \".(node|lib)$\" --upload ${GITHUB_TOKEN}",
+    "release": "np",
     "test": "mocha test/*.test.js --timeout 5000"
   },
   "dependencies": {
@@ -26,6 +38,7 @@
   },
   "devDependencies": {
     "mocha": "^8.2.1",
-    "prebuild": "^10.0.1"
+    "prebuild": "^10.0.1",
+    "np": "^7.2.0"
   }
 }
