--- a/.github/workflows/prebuild.yml
+++ b/.github/workflows/prebuild.yml
@@ -30,7 +30,7 @@ jobs:
           ref: master
       - run: npm ci --ignore-scripts
       - run: npm run prerebuild
-      - run: npx cross-env TCI=${PWD}/.transbase prebuild --runtime napi --all --include-regex ".(node|lib|so|dll)$" --upload ${{secrets.git_hub_token}}
+      - run: npx cross-env TCI=${PWD}/.transbase prebuild --runtime napi --all --include-regex \".(node|lib|so|dll)$\" --upload ${{secrets.git_hub_token}}
   Linux:
     runs-on: ubuntu-latest
     steps:
