--- a/.github/workflows/prebuild.yml
+++ b/.github/workflows/prebuild.yml
@@ -11,7 +11,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-latest, windows-latest, macos-latest]
+        os: [ubuntu-latest, windows-2019, macos-latest]
     steps:
       - uses: actions/setup-node@v2
         with:
