--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,10 +13,13 @@ jobs:
       matrix:
         os: [ubuntu-latest, windows-2019, macos-latest]
     steps:
-      - uses: actions/setup-node@v2
+      - uses: actions/setup-python@v4
         with:
-          node-version: 14
-      - uses: actions/checkout@v2
+          python-version: "3.9"
+      - uses: actions/setup-node@v3
+        with:
+          node-version: 16
+      - uses: actions/checkout@v3
       - run: npm ci --ignore-scripts
       - run: npm run rebuild
       - name: Test
